tests/snapshots/trace_solver@13791291295748619026.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    rules_display_style: Plain
  bundle_name: stateless
  request: "[ref x]: &mut [T]"
---
[ref x] @ s: &mut [T]
// Applying rule `ConstructorRef`
ref x @ &mut (*s).0: &mut T
// Applying rule `BindingBorrow`
x @ &&mut (*s).0: &&mut T
// Applying rule `Binding`
let x: &&mut T = &&mut (*s).0

// Final bindings (simplified):
let x: &&mut T = &&mut (*s).0;
